--- a/index.html
+++ b/index.html
@@ -12,23 +12,71 @@
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
+    *{
+      padding: 0;
+      margin: 0;
+    }
+    .box{
+      margin: 0;
+      padding: 0;
+      background-color: rgba(244, 208, 78, 1);
+      display: flex;
+      justify-content: center;
+    }
+    .outerbox{
+      height: 450px;
+      width: 300px;
+      display: flex;
+      flex-direction: column;
+      border: 2px solid black;
+      border-radius: 12px;
+      margin-top: 20px;
+      background-color: white;
+      justify-content: center;
+      box-shadow: 5px 5px 1px;
+    }
+    .top-img{
+      margin-top: 1px;
+      margin-left: 20px;
+      margin-right: 20px;
+      border: 1px solid white;
+      border-radius: 10px;
+    }
+    .yellow{
+      background-color: rgba(244, 208, 78, 1);
+      margin-right: 180px;
+      border: 1px solid white;
+      border-radius: 8px;
+    }
+    .learning{
+      text-align: center;
+    }
+    .text{
+      margin: 20px;
+    }
+    .name{
+      display: flex;
+      flex-direction: row;
+      margin-left: 20px;
+    }
   </style>
 </head>
 <body>
-
-  Learning
-
-  Published 21 Dec 2023
-
-  HTML & CSS foundations
-
-  These languages are the backbone of every website, defining structure, content, and presentation.
-
-  Greg Hooper
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="box">
+    <div class="outerbox">
+      <img src="./assets/images/Screenshot 2024-04-17 085140.png" class="top-img">
+      <div class="text">
+        <div class="yellow">
+          <p style="font-weight: bold;" class="learning">Learning</p>
+        </div>
+        <p style="margin-top: 15px; font-size: 13px;">Published 21 Dec 2023</p>
+        <p style="font-weight: bold; font-size: 16px; margin-top: 10px; font-size: 18px;">HTML & CSS foundations</p>
+        <p style="color: hsl(0, 0%, 50%); font-size: 14px; color: gray;">These languages are the backbone of every website, defining structure, content, and presentation.</p>
+      </div>
+      <div class="name">
+        <img src="./assets/images/image-avatar.webp" style="height: 30px;"> <p style="margin-left: 5px; margin-top: 2px; font-weight: bold; font-size: 13px;">Greg Hooper</p>
+      </div>
+    </div>
   </div>
 </body>
 </html>
